changed label on page3

--- a/SimpleAlert/SimpleAlert/Page3.xaml
+++ b/SimpleAlert/SimpleAlert/Page3.xaml
@@ -4,7 +4,7 @@
              x:Class="SimpleAlert.Page3">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="This is third Page"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
