--- a/SimpleAlert/SimpleAlert/Page2.xaml
+++ b/SimpleAlert/SimpleAlert/Page2.xaml
@@ -4,45 +4,56 @@
              x:Class="SimpleAlert.Page2">
     <ContentPage.Content>
         <Grid>
-            <StackLayout x:Name="stackL" >
+            <StackLayout x:Name="stackL" 
+                         VerticalOptions="Start" 
+                         HorizontalOptions="Center"
+                         Grid.Column="0"
+                         Grid.Row="0">
                 <Button x:Name="btnAlert"
-                    Margin="50" 
-                    WidthRequest="150" 
-                    Text="Click" 
-                    VerticalOptions="Start" 
-                    HorizontalOptions="Center"
-                    Grid.Column="0"
-                    Grid.Row="0"
-                    Clicked="BtnAlert_Clicked"/>
+                        Margin="50" 
+                        WidthRequest="150" 
+                        Text="Click" 
+                        Clicked="BtnAlert_Clicked"/>
+                <Button x:Name="systemAlert"
+                        Text="DisplayAlert"
+                        Margin="50"
+                        Clicked="SystemAlert_Clicked"/>
             </StackLayout>
-
             
-            <BoxView x:Name="boxView"
-                     BackgroundColor="LightBlue" 
-                     HeightRequest="150" 
-                     WidthRequest="200"
-                     VerticalOptions="Center"
-                     HorizontalOptions="Center" 
-                     CornerRadius="5"
-                     IsVisible="False"/>
-            <Label x:Name="label"
-                   Text="Alert!" Grid.Column="0" Grid.Row="0"
-                   VerticalOptions="Center"
-                   HorizontalOptions="Center"
-                   FontSize="26"
-                   Margin="0,0,0,60"
-                   TextColor="Black"
-                   IsVisible="False"/>
-            <Button x:Name="btnBack"
-                    Text="Back"
-                    Grid.Column="0"
-                    Grid.Row="0"
-                    VerticalOptions="Center"
-                    HorizontalOptions="Center"
-                    Margin="0,60,0,0"
-                    IsVisible="False"
-                    Clicked="BtnBack_Clicked"/>
+            <!--To stack the forms here you just need to put them in same Grid.Row and Grid.Column-->
 
+            <ContentView x:Name="alertBox"
+                         Grid.Column="0"
+                         Grid.Row="0"
+                         BackgroundColor="#C0808080"
+                         IsVisible="True">
+                    <Grid HorizontalOptions="Center"
+                          VerticalOptions="Center">
+                        <BoxView x:Name="boxView"
+                                   BackgroundColor="White" 
+                                   HeightRequest="160" 
+                                   WidthRequest="340"
+                                   VerticalOptions="Center"
+                                   HorizontalOptions="Center" 
+                                   CornerRadius="3"/>
+                        <Label x:Name="label"
+                               Text="Alert" 
+                               Margin="30,15,0,0"
+                               FontSize="26"
+                               TextColor="Black"/>
+                        <Label Text="Imitation"
+                               TextColor="Black"
+                               Margin="30,60,0,0"/>
+                        <Button x:Name="btnBack"
+                                Text="Ok"
+                                VerticalOptions="End"
+                                HorizontalOptions="End"
+                                Margin="0,60,0,0"
+                                BackgroundColor="White"
+                                TextColor="HotPink"
+                                Clicked="BtnBack_Clicked"/>
+                    </Grid>
+            </ContentView>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
