--- a/SimpleAlert/SimpleAlert/Page2.xaml
+++ b/SimpleAlert/SimpleAlert/Page2.xaml
@@ -26,7 +26,7 @@
                          Grid.Column="0"
                          Grid.Row="0"
                          BackgroundColor="#C0808080"
-                         IsVisible="True">
+                         IsVisible="False">
                     <Grid HorizontalOptions="Center"
                           VerticalOptions="Center">
                         <BoxView x:Name="boxView"
